--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Members</title>
+    <title>GCRI Members</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@
     </div>
 
     <div class="container">
-        <h2>R&D Members</h2>
+        <h2>Official Research & Engineering Members</h2>
         <iframe src="https://w0nqwrko.nocodb.com/#/nc/gallery/a199aa00-a88b-45d2-ad79-bbbc16e7d7e4"></iframe>
     </div>
 
